--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://hexo2019.netlify.com
 root: /
-permalink: :lang/:year/:month/:day/:title/
+#permalink: :lang/:year/:month/:day/:title/
 permalink_defaults:
 
 # Directory
