--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,6 @@ keywords:
 author: Niraj Vara
 language: 
   - en
-  - zh-cn
-  - es
 
 timezone:
 
@@ -26,7 +24,7 @@ permalink_defaults:
 source_dir: source
 public_dir: public
 tag_dir: tags
-#archive_dir: archives
+archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
